// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics bullet 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 15,
                      "line": 1,
                      "offset": 14,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "text",
                  "value": "a bullet",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 15,
                  "line": 1,
                  "offset": 14,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 1,
          "offset": 14,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`basics bullet 2`] = `
VFile {
  "contents": "- [ ] a bullet
",
  "cwd": "/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`basics bullet 3`] = `
VFile {
  "contents": "<ul class=\\"contains-task-list\\">
<li class=\\"task-list-item\\"><input type=\\"checkbox\\" disabled> a bullet</li>
</ul>",
  "cwd": "/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
